--- a/flutter_app_demo/lib/l10n/intl_zh.arb
+++ b/flutter_app_demo/lib/l10n/intl_zh.arb
@@ -1,5 +1,5 @@
 {
-  "tab_demo" : "tab Demo",
+  "tab_demo" : "首页",
   "base_widget" : "基础组件",
   "layout_widget" : "布局组件",
   "interactive_event" : "交互事件",
@@ -11,8 +11,10 @@
   "future_native" : "Flutter混编原生",
   "future_provider" : "Flutter状态管理（Provider）",
   "lid_test" : "三方库测试",
-  "" : "",
-  "" : "",
+  "switch_lan" : "切换语言",
+  "login" : "登录",
+  "personal_center" : "个人",
+  "show_dialog" : "弹窗",
   "" : "",
   "" : "",
   "" : "",
